--- a/01-introduccion/01-Introduccion/index.html
+++ b/01-introduccion/01-Introduccion/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/app.css">
 
@@ -127,21 +128,47 @@
     <section class="seccion">
         <h1 class="text-center my-5 heading">Botones</h1>
 
-        <button type="button" class="btn btn-primary">Agregar</button>
+        <button type="button" class="btn btn-primary">Agregar <i class="bi bi-person-plus-fill"></i></button>
         <button type="button" class="btn btn-danger">Eliminar</button>
         <button type="button" class="btn btn-warning">Comprobar</button>
         <button type="button" class="btn btn-dark">Comprobar</button>
         <a href="#" class="btn btn-primary">Enlace</a>
+
+        <input type="submit" class="btn btn-primary" value="Enviar Formulario">
+        <button type="submit" class="btn btn-success">Enviar Formulario <i class="bi bi-alarm-fill"></i></button>
+
+        <a href="#" class="btn btn-outline-primary">Enlace</a>
+        <a href="#" class="btn btn-outline-danger">Enlace</a>
+        <a href="#" class="btn btn-outline-warning">Enlace</a>
+
+        <button type="button" class="btn btn-primary btn-lg">Agregar</button>
+        <button type="button" class="btn btn-danger btn-sm">Eliminar</button>
+        <button type="button" class="btn btn-warning fs-1">Comprobar</button>
+        <button type="button" class="btn btn-dark" disabled>Comprobar</button>
+        <button type="button" class="btn btn-danger">Eliminar <i class="bi bi-x-octagon"></i></button>
     </section>
 
     <section class="seccion">
         <h1 class="text-center my-5 heading">Margins y Paddings</h1>
 
+        <div class="container-xl">
+            <div class="bg-success p-3 text-white mb-5">Ejemplo de padding</div>
+            <div class="bg-danger p-3 text-white mx-5">Ejemplo de margin</div>
+            <div class="d-grid gap-2">
+                <div class="bg-success p-3 text-white">Ejemplo de padding</div>
+                <div class="bg-danger p-3 text-white">Ejemplo de margin</div>
+            </div>
+        </div>
+        
     </section>
 
     <section class="seccion">
         <h1 class="text-center my-5 heading">Spinners</h1>
 
+        <div class="d-flex justify-content-center">
+            <div class="spinner-border text-primary"></div>
+        </div>
+        
     </section>
 
     <section class="seccion">
@@ -179,4 +206,6 @@
 
     </section>
 
+    <script src="js/bootstrap.bundle.js"></script>
+</body>
 </html>
